force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/Sansan_CI__BusinessLocationList__c.object-meta.xml
<CustomObject>
    <label>拠点リスト</label>
    <nameField>
        <label>拠点リスト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>