force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Capital__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Capital__c</fullName>
    <label>資本金（円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>