force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__CapitalRange_lt__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CapitalRange_lt__c</fullName>
    <label>[廃止]資本金レンジ（千円）大</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>