force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__City__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__City__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>