force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__CompanyEmployees__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CompanyEmployees__c</fullName>
    <label>会社の従業員規模（人）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>