force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__CompanyKeywords__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CompanyKeywords__c</fullName>
    <label>会社キーワード</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>