force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__CorporateNumber__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CorporateNumber__c</fullName>
    <label>法人番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>