force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__CountryCode__c</fullName>
    <label>国コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>