force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__EmployeeNumberRange_ge__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__EmployeeNumberRange_ge__c</fullName>
    <label>[廃止]従業員レンジ小</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>