force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Fax__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Fax__c</fullName>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>