force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__LatestSales__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LatestSales__c</fullName>
    <label>売上高（円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>