force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__LatestSalesRange_ge__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__LatestSalesRange_ge__c</fullName>
    <label>[廃止]最新期業績売上高レンジ(百万円) 小</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>