force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__MainMiddleIndustrialClassName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__MainMiddleIndustrialClassName__c</fullName>
    <label>主業：中分類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>