force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__MiddleIndustrialClassCode__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__MiddleIndustrialClassCode__c</fullName>
    <label>[廃止]中分類コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>