force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__MinorIndustrialClassName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__MinorIndustrialClassName__c</fullName>
    <label>[廃止]小分類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>