force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Range_Capital__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Range_Capital__c</fullName>
    <label>[廃止]資本金（円）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>