force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Range_CompanyEmployees__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Range_CompanyEmployees__c</fullName>
    <label>[廃止]会社の従業員規模（人）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>