force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Range_LatestSales__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Range_LatestSales__c</fullName>
    <label>[廃止]最新期業績売上高（円）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>