force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Slc__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Slc__c</fullName>
    <label>SLC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>