force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Soc__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Soc__c</fullName>
    <label>SOC</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>