force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Street__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Street__c</fullName>
    <label>地名番地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>