force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__Street_Building__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Street_Building__c</fullName>
    <formula>Sansan_CI__Street__c  + &quot; &quot; +  Sansan_CI__Building__c</formula>
    <label>地名番地・建物名</label>
    <type>Text</type>
</CustomField>