force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__SubMajorIndustrialClassName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__SubMajorIndustrialClassName__c</fullName>
    <label>従業：大分類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>