force-app/main/default/objects/Sansan_CI__BusinessLocationList__c/fields/Sansan_CI__SubMiddleIndustrialClassName__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__SubMiddleIndustrialClassName__c</fullName>
    <label>従業：中分類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>